deploy/kmamiz-demo-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: kmamiz-system
spec:
  type: NodePort
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: kmamiz-system
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-pv
              mountPath: /data/db
            - name: mongo-init
              mountPath: "/docker-entrypoint-initdb.d/mongo-init.js"
              subPath: "mongo-init.js"
      volumes:
        - name: mongo-init
          configMap:
            name: mongo-init
  volumeClaimTemplates:
    - metadata:
        name: mongo-pv
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 2Gi
