deploy/kmamiz-rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kmamiz
  namespace: kmamiz-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kmamiz
    spec:
      serviceAccountName: kmamiz-reader
      containers:
        - name: kmamiz
          image: "reg.stw.tw/kmamiz:rust-dp"
          ports:
            - containerPort: 3000
        - name: kmamiz-dp
          image: "reg.stw.tw/kmamiz-dp"
          ports:
            - containerPort: 8000
  selector:
    matchLabels:
      app: kmamiz
---
apiVersion: v1
kind: Service
metadata:
  name: kmamiz
  namespace: kmamiz-system
spec:
  type: NodePort
  selector:
    app: kmamiz
  ports:
    - protocol: TCP
      port: 8080 # this needs to match SERVICE_PORT
      targetPort: 3000
