deploy/kmamiz-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kmamiz
  namespace: kmamiz-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kmamiz
    spec:
      serviceAccountName: kmamiz-reader
      containers:
        - name: kmamiz
          image: "{your-image}"
          ports:
            - containerPort: 3000
  selector:
    matchLabels:
      app: kmamiz
---
apiVersion: v1
kind: Service
metadata:
  name: kmamiz
  namespace: kmamiz-system
spec:
  type: NodePort
  selector:
    app: kmamiz
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
